[package]
name = "staticmap"
version = "0.4.0"
authors = ["danielalvsaaker <daniel@nopemail.net>", "Arlo Blythe <arlo@urwick.co.uk>"]
edition = "2021"
description = "Tile based static map image renderer."
# May end up out of date with my changes at some point
documentation = "https://docs.rs/staticmap"
repository = "https://github.com/arlohb/staticmap"
readme = "README.md"
license = "MIT"
categories = ["multimedia::images"]
keywords = ["openstreetmap", "osm", "map"]

[dependencies]
attohttpc = { version = "0.17", default-features = false, features = ["tls-rustls"] }
png = { version = "0.16", default-features = false }
rayon = "1.5"
tiny-skia = "0.5"
